--- a/src/app/componentes/ficheros/ficheros.component.html
+++ b/src/app/componentes/ficheros/ficheros.component.html
@@ -1,12 +1,12 @@
 <div id="notas" class="animated fadeIn">
 
-  <h2>Ficheros</h2>
+  <h2>Ficheros y directorios</h2>
 
   <app-indice [items]="itemsIndice"></app-indice>
   
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>1. Directorio <i>dist</i></h3>
+  <h3 id="dist">1. Directorio <i>dist</i></h3>
   <hr>
 
   <ul>
@@ -42,7 +42,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>4. Directorio <i>src</i></h3>
+  <h3 id="src">4. Directorio <i>src</i></h3>
   <hr>
 
   <h4>4.1 Directorio <i>app</i></h4>
@@ -127,7 +127,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>6. Fichero <i>angular.json</i></h3>
+  <h3 id="angular">6. Fichero <i>angular.json</i></h3>
   <hr>
 
   <ul>
@@ -142,7 +142,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>7. Fichero <i>tsconfig.json</i></h3>
+  <h3 id="tsconfig">7. Fichero <i>tsconfig.json</i></h3>
   <hr>
 
   <ul>
@@ -154,7 +154,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>8. Fichero <i>tslint.json</i></h3>
+  <h3 id="tslint">8. Fichero <i>tslint.json</i></h3>
   <hr>
 
   <ul>
@@ -168,7 +168,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>9. Fichero <i>.editorconfig</i></h3>
+  <h3 id="editorconfig">9. Fichero <i>.editorconfig</i></h3>
   <hr>
 
   <ul>
@@ -177,7 +177,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>10. Fichero <i>.gitignore</i></h3>
+  <h3 id="gitignore">10. Fichero <i>.gitignore</i></h3>
   <hr>
 
   <ul>
@@ -187,7 +187,7 @@
 
   <!-- ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
 
-  <h3>11. Fichero <i>README.md</i></h3>
+  <h3 id="readme">11. Fichero <i>README.md</i></h3>
   <hr>
 
   <ul>
