[ Componente 'ficheros' ] » Contenido actualizado

--- a/src/app/componentes/ficheros/ficheros.component.html
+++ b/src/app/componentes/ficheros/ficheros.component.html
@@ -97,7 +97,7 @@
   <h3 id="package">5. Ficheros <i>package.json</i> y <i>package-lock.json</i></h3>
   <hr>
 
-  <div class="nota mb-40">Consultar <a href="https://medium.com/coinmonks/everything-you-wanted-to-know-about-package-lock-json-b81911aa8ab8" target="_blank">enlace</a></div>
+  <div class="consultar mb-40">Consultar <a href="https://medium.com/coinmonks/everything-you-wanted-to-know-about-package-lock-json-b81911aa8ab8" target="_blank">enlace</a></div>
   
   <ul>
     <li>Estos dos ficheros nos permiten gestionar las dependencias de nuestro proyecto a través del comando <b>$ npm install</b> o <b>$ npm i</b></li>
