--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,15 @@ $lightprimary: rgba(50,55,65,.25);
     width: fit-content;
 }
 
+.consultar {
+    color: rgb(0,130,255);
+    border: 1px solid rgb(0,130,255);
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 5px 0;
+    width: fit-content;
+}
+
 .nota {
     color: #00af4b;
     border: 1px solid #00af4b;
